# sessionguard

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  cliff.toml  deny.toml  install.sh  justfile  release.toml
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tool_pattern.md
.github/workflows/: ci.yml  release-homebrew.yml  release.yml
contrib/: sessionguard.service
docs/design/: handoff.md  hardening-audit.md  migrate.md  update.md
docs/history/: migrate.md  update.md
docs/ops/: homebrew-tap-token.md
examples/: notify_dump.rs
integrations/claude-code/: README.md
integrations/claude-code/skills/sessionguard-migrate/: SKILL.md
scripts/: check-consistency.sh  dogfood.sh  migrate-dogfood.sh  update-dogfood.sh
src/: cli.rs  config.rs  daemon.rs  detector.rs  error.rs  event_log.rs  health.rs  inventory.rs  lib.rs  main.rs  migrate.rs  reconciler.rs  registry.rs  sessions.rs  update.rs  watcher.rs
src/migrate/: mod.rs  tests.rs
src/tools/: mod.rs
src/tools/builtin/: aider.toml  claude_code.toml  codex.toml  cursor.toml  gemini_cli.toml  opencode.toml  windsurf.toml
tests/: cli_smoke.rs  sandbox.rs
tools/dashboard/: README.md  app.py
