[package]
name = "sessionguard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Droco LLC <dev@droco.io>"]
description = "A system-level daemon that keeps AI coding sessions intact when your projects move"
license = "MIT"
repository = "https://github.com/PilotDevo/sessionguard"
homepage = "https://github.com/PilotDevo/sessionguard"
readme = "README.md"
keywords = ["ai", "session", "daemon", "filesystem", "developer-tools"]
categories = ["command-line-utilities", "development-tools", "filesystem"]

[[bin]]
name = "sessionguard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
directories = "6"
glob = "0.3"
libc = "0.2"
notify = "8"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "sync", "time"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
